--- a/themes/Matrix-rEFInd/theme.conf
+++ b/themes/Matrix-rEFInd/theme.conf
@@ -10,7 +10,7 @@ banner_scale fillscreen
 
 # the icon sizes
 small_icon_size 56
-big_icon_size 380
+big_icon_size 128
 
 # make boot a little cleaner
 use_graphics_for osx,linux,elilo,grub,windows
@@ -20,7 +20,7 @@ selection_big   themes/Matrix-rEFInd/selection_big.png
 selection_small themes/Matrix-rEFInd/selection_small.png
 
 # only show shutdown and bios
-showtools shutdown,firmware,hidden_tags
+showtools shutdown,firmware
 
 # only show two icons at a time
-max_tags 4
+max_tags 3
